--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "django==3.1.1",
     "gunicorn==20.0.4",
+    "venv-run>=0.2.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.12.2"
